--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.4",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
     "mime": "^4.0.7",
     "moment": "^2.30.1",
